# thermal_solver_1d

./: .buildinfo  .gitignore  .pdm-python  .pre-commit-config.yaml  Makefile  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  td_rentee_atmo.html  td_rentee_atmo.mesher.html  td_rentee_atmo.solver.html  td_rentee_atmo.solver_inputs.html
.github/workflows/: generate-docs.yml
_modules/: index.html
_modules/td_rentee_atmo/: mesher.html  solver.html  solver_inputs.html
_sources/: index.rst.txt  modules.rst.txt
_sources/source/: td_rentee_atmo.rst.txt
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  td_rentee_atmo.doctree  td_rentee_atmo.mesher.doctree  td_rentee_atmo.solver.doctree  td_rentee_atmo.solver_inputs.doctree
docs/_build/doctrees/source/: modules.doctree  td_rentee_atmo.doctree  td_rentee_atmo.mesher.doctree  td_rentee_atmo.solver.doctree  td_rentee_atmo.solver_inputs.doctree
docs/_build/html/: .buildinfo  genindex.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  td_rentee_atmo.html  td_rentee_atmo.solver_inputs.html
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: index.rst.txt  (+1 more)
docs/source/: td_rentee_atmo.solver.rst
source/: modules.html  td_rentee_atmo.html  td_rentee_atmo.mesher.html  td_rentee_atmo.solver.html  td_rentee_atmo.solver_inputs.html
src/td_rentee_atmo/: mesher.py  solver.py  solver_inputs.py
tests/: test_global_for_ci.py
(+6 files in other folders)
