[project]
requires-python = ">=3.11" 
name = "td_rentee_atmo"
description = "Project modelizing a 1D thermical solver with a time dimension."
authors = [
    { name = 'Arnaud Somville', email = 'arnaud.somville@estaca.eu' },
    {name = "Arnaud SOMVILLE", email = "arnaud.somville@estaca.eu"},
]
version = "0.1.0"
dependencies = [
    "pydantic>=2.10.3",
    "numpy>=2.1.3",
    "matplotlib>=3.9.3",
]
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.3.3",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "pdm==2.20.1",
]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]
doc = [
    "sphinx>=8.0.2",
    "sphinxcontrib-apidoc>=0.5.0",
    "sphinx-rtd-theme>=3.0.0rc1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pdm.lock]
targets = [
    { os = "any", python = ">=3.11", platform = "any" }
]
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
